--- a/selectedMovieDetails.html
+++ b/selectedMovieDetails.html
@@ -16,6 +16,7 @@
 
 <body style="background: #3d3d3d">
 
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
     <script type="text/javascript" src="Configuration.js"></script>
     <script type="text/javascript" src="MovieDetails.js"></script>
 
